@@ -140,5 +140,6 @@
     <input type="file" class="file_field_class" title="File Field 3" />
 
     In bold <b>One B</b> and <b>Two B</b> for example text
+    In italic <i>One I</i> and <i>Two I</i> for example text
   </body>
 </html>
