@@ -52,3 +52,4 @@ require 'druid/elements/media'
 require 'druid/elements/audio'
 require 'druid/elements/video'
 require 'druid/elements/bold'
+require 'druid/elements/italic'
